# terra-vegas

./: .gitignore  Cargo.toml  README.md
contracts/coinflip-contract/: Cargo.toml
contracts/coinflip-contract/examples/: schema.rs
contracts/coinflip-contract/schema/: bets.json  casino_config.json  current_round.json  execute_msg.json  instantiate_msg.json  query_msg.json  rewards.json  round_timer.json  win_coefficients.json
contracts/coinflip-contract/src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
contracts/community/: Cargo.toml
contracts/community/examples/: schema.rs
contracts/community/schema/: config_response.json  execute_msg.json  instantiate_msg.json
contracts/community/src/: contract.rs  state.rs  testing.rs
contracts/distribution-contract/: Cargo.toml  README.md
contracts/distribution-contract/examples/: schema.rs
contracts/distribution-contract/schema/: claim.json
contracts/distribution-contract/src/: claim.rs  contract.rs  global.rs  lib.rs  math.rs  state.rs  user.rs  utils.rs
contracts/doubledice-contract/: Cargo.toml
contracts/doubledice-contract/examples/: schema.rs
contracts/doubledice-contract/schema/: casino_config.json  current_round.json  instantiate_msg.json  query_msg.json  round_timer.json
contracts/doubledice-contract/src/: contract.rs  msg.rs  state.rs  utils.rs
contracts/governance-contract/: Cargo.toml
contracts/governance-contract/examples/: schema.rs
contracts/governance-contract/src/: contract.rs  error.rs  staking.rs  state.rs  tests.rs
contracts/ico-contract/: Cargo.toml
contracts/ico-contract-old/: Cargo.toml  NOTICE
contracts/ico-contract-old/examples/: schema.rs
contracts/ico-contract-old/schema/: execute_msg.json  ico_info.json  ico_timer.json  instantiate_msg.json  prices.json  prices_for_amount.json  private_sale_coin_supply.json  public_sale_coin_supply.json  query_msg.json  user_balance.json
contracts/ico-contract-old/src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
contracts/ico-contract/examples/: schema.rs
contracts/ico-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/reserve-contract/: Cargo.toml
contracts/reserve-contract/examples/: schema.rs
contracts/reserve-contract/schema/: config.json  execute_msg.json  games.json  instantiate_msg.json  query_msg.json  threshold.json
contracts/reserve-contract/src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
contracts/vegas-token-contract/: .gitignore  Cargo.toml
contracts/vesting-contract/: Cargo.toml
contracts/vesting-contract/examples/: schema.rs
contracts/vesting-contract/src/: contract.rs  state.rs  tests.rs
merkle-airdrop/: Cargo.toml
merkle-airdrop/src/: contract.rs
scripts/: play.sh  run.sh  terrand-worker.sh  test.sh  test_airdrop.sh  test_distribution.sh  test_game.sh  test_governance.sh  test_ico.sh  test_reserve.sh  test_token.sh
