[package]
name = "vegas-distribution-contract"
version = "3.0.0"
authors = ["MSNTCS <mohammad@terra.money>", "0xantman <antho74830@gmail.com>"]
edition = "2018"
description= "Vegas reward distribution contract based on LoTerra staking contract based on Anchor staking contract"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LoTerra/loterra-staking-contract"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw20 = "0.8.0"
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.9.0", features = ["iterator"] }
reserve-contract = { version = "0.1.0", path = "../reserve-contract", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
terra-cosmwasm = "2.2.0"
terra-vegas = { version = "0.3.0", path = "../../packages/terra_vegas" }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0", default-features = false }
cw20-base = "0.9.0"