[package]
name = "doubledice-contract"
version = "0.1.0"
authors = ["Terra-vegas"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
terra-cosmwasm = "2.2.0"
cosmwasm-bignumber = "2.2.0"
cw0 = "0.8.1"
cw2 = "0.8.1"
cw20 = "0.8.1"
terrand = { version = "3.1.1", git = "https://github.com/terra-vegas/terrand-contract-step1", features = ["library"] }
reserve-contract = { version = "0.1.0", path = "../reserve-contract", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
terra-vegas = { version = "0.3.0", path = "../../packages/terra_vegas" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
