[package]
name = "reserve-contract"
version = "0.1.0"
authors = ["IntegralTeam <repo@sfxdx.ru>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
terra-cosmwasm = "2.2.0"
cosmwasm-bignumber = "2.2.0"
cw0 = "0.8.1"
cw2 = "0.8.1"
cw20 = "0.8.1"
moneymarket = "0.3.0"
schemars = "0.8.3"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
